src/test/run-pass/issue-3091.rs
fn main() {
    let x = 1;
    let y = 1;
    assert &x == &y;
}
