src/test/compile-fail/import-loop.rs
// error-pattern:cyclic import

import x;

fn main() {
  auto y = x;
}
